--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "icons": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
